--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,18 @@
     "require": {
         "php": "^8.1",
         "ext-json": "*",
-        "pocketmine/binaryutils": "^0.2.0",
+		"ext-binary": "^1.0.0",
         "pocketmine/color": "^0.2.0 || ^0.3.0",
         "pocketmine/math": "^0.3.0 || ^0.4.0 || ^1.0.0",
-        "pocketmine/nbt": "^1.0.0",
+        "pocketmine/nbt": "dev-stable",
         "ramsey/uuid": "^4.1"
     },
+	"repositories": [
+		{
+			"type": "vcs",
+			"url": "https://github.com/pmmp-cpp/nbt"
+		}
+	],
     "require-dev": {
         "phpstan/phpstan": "2.1.0",
         "phpstan/phpstan-phpunit": "^2.0.0",
